--- a/order-service-api-dev.yml
+++ b/order-service-api-dev.yml
@@ -1,11 +1,11 @@
 spring:
-  appplication:
+  application:
     name: 'order-service-api'
   jpa:
     hibernate:
       ddl-auto: create
     properties:
-      hibenate:
+      hibernate:
         dialect: org.hibernate.dialect.MySQL8Dialect
   datasource:
     url: ''
@@ -19,9 +19,8 @@ springdoc:
   openapi:
     info:
       title: 'Order Service API'
-      decription: 'Api reponsible for managing service orders"
+      description: 'API responsible for managing service orders'
       version: '1.0.0'
 
 server:
   port: ${SERVER_PORT:8100}
-        
